// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image no entity 1`] = `
<img
  alt=""
  src="404.svg"
  width="256"
/>
`;

exports[`Image renders 1`] = `
<img
  alt=""
  src="/example.png"
  width="256"
/>
`;
